# aiiac

./: CHANGELOG.md  Dockerfile  Readme.md  __init__py  app_streamlit.py  pyproject.toml  requirements.txt  streamlit_app.py
src/aiiac/: cli.py
src/aiiac/core/: llm.py
src/aiiac/generators/: __init__py  base.py  config.py  iac.py  pipeline.py  utility.py
src/aiiac/models/: schemas.py
src/aiiac/utils/: validators.py
src/aiiac/web/: app.py
test/: test_generator.py
